--- a/front-end/assets/bootstrap.scss
+++ b/front-end/assets/bootstrap.scss
@@ -2,6 +2,10 @@
 @include font-face(Helvetica, './fonts/Helvetica/HelveticaBold/HelveticaBold', 700, normal, eot ttf woff);
 @include font-face(Helvetica, './fonts/Helvetica/HelveticaRegular/HelveticaRegular', 400, normal, eot ttf woff);
 
+@import '~vuetify/src/styles/styles.sass';
+@import '~vuetify/src/styles/settings/_variables.scss';
+@import '~vuetify/src/styles/tools/_functions.sass';
+
 @import "assets/helpers/hot-styles";
 
 @import "assets/custom_styles/custom_vuetify";
