--- a/front-end/assets/helpers/_font-helper.sass
+++ b/front-end/assets/helpers/_font-helper.sass
@@ -1,98 +1,119 @@
+@import '~vuetify/src/styles/styles.sass'
+
+.size12-md-weight400
+  @media (max-width: map-get($grid-breakpoints, md))
+    font-size: 12px !important
+    font-weight: 400 !important
+    font-style: normal !important
+    letter-spacing: 0 !important
+
+.size8-weight400
+  font-size: 8px !important
+  font-weight: 400 !important
+  font-style: normal !important
+  letter-spacing: 0 !important
+
+.size10-weight400
+  font-size: 10px !important
+  font-weight: 400 !important
+  font-style: normal !important
+  letter-spacing: 0 !important
+
 .size12-weight400
-  font-size: 12px
-  font-weight: 400
-  line-height: 14px
-  font-style: normal
-  letter-spacing: 0
+  font-size: 12px !important
+  font-weight: 400 !important
+  font-style: normal !important
+  letter-spacing: 0 !important
 
 .size14-weight400
   font-size: 14px
   font-weight: 400
-  line-height: 14px
   font-style: normal
   letter-spacing: 0
 
 .size16-weight400
   font-size: 16px
   font-weight: 400
-  line-height: 14px
   font-style: normal
   letter-spacing: 0
 
 .size18-weight400
   font-size: 18px
   font-weight: 400
-  line-height: 14px
   font-style: normal
   letter-spacing: 0
 
 .size22-weight400
-  font-size: 14px
+  font-size: 22px
   font-weight: 400
-  line-height: 22px
   font-style: normal
   letter-spacing: 0
 
 .size36-weight400
   font-size: 36px
   font-weight: 400
-  line-height: 22px
+  font-style: normal
+  letter-spacing: 0
+
+.size12-weight700
+  font-size: 12px
+  font-weight: 700
+  font-style: normal
+  letter-spacing: 0
+
+.size14-weight700
+  font-size: 14px
+  font-weight: 700
   font-style: normal
   letter-spacing: 0
 
 .size16-weight700
   font-size: 16px
   font-weight: 700
-  line-height: 22px
   font-style: normal
   letter-spacing: 0
 
 .size18-weight700
   font-size: 18px
   font-weight: 700
-  line-height: 22px
   font-style: normal
   letter-spacing: 0
 
 .size20-weight700
   font-size: 20px
   font-weight: 700
-  line-height: 22px
   font-style: normal
   letter-spacing: 0
 
 .size22-weight700
   font-size: 22px
   font-weight: 700
-  line-height: 22px
   font-style: normal
   letter-spacing: 0
 
 .size24-weight700
   font-size: 24px
   font-weight: 700
-  line-height: 22px
   font-style: normal
   letter-spacing: 0
 
 .size36-weight700
   font-size: 36px
   font-weight: 700
-  line-height: 22px
+  line-height: 60px
   font-style: normal
   letter-spacing: 0
 
 .size52-weight700
   font-size: 52px
   font-weight: 700
-  line-height: 22px
+  line-height: 80px
   font-style: normal
   letter-spacing: 0
 
 .size64-weight700
   font-size: 64px
   font-weight: 700
-  line-height: 22px
   font-style: normal
   letter-spacing: 0
 
