--- a/front-end/assets/helpers/_hot-styles.scss
+++ b/front-end/assets/helpers/_hot-styles.scss
@@ -1,19 +1,21 @@
+@import '~vuetify/src/styles/styles.sass';
+
 .flex-center{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex !important;
+  justify-content: center !important;;
+  align-items: center !important;;
 }
 
 .flex-left{
-  display: flex;
-  justify-content: left;
-  align-items: center;
+  display: flex !important;;
+  justify-content: left !important;;
+  align-items: center !important;;
 }
 
 .flex-right{
-  display: flex;
-  justify-content: right;
-  align-items: center;
+  display: flex !important;;
+  justify-content: right !important;;
+  align-items: center !important;;
 }
 
 .w-100{
@@ -38,4 +40,44 @@
 
 .text-underline-none {
   text-decoration: none !important;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-md-center {
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    text-align: center;
+  }
+}
+
+.mb-80 {
+  margin-bottom: 80px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
+}
+
+.mb-md-100 {
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    margin-bottom: 100px;
+  }
+}
+
+.mb-md-150 {
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    margin-bottom: 150px;
+  }
+}
+
+.mb-md-200 {
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    margin-bottom: 200px;
+  }
 }
