--- a/front-end/assets/helpers/_font-helper.sass
+++ b/front-end/assets/helpers/_font-helper.sass
@@ -55,11 +55,23 @@
   font-style: normal
   letter-spacing: 0
 
-.size12-weight700
-  font-size: 12px
+.size8-weight700
+  font-size: 8px !important
+  font-weight: 700 !important
+  font-style: normal !important
+  letter-spacing: 0 !important
+
+.size10-weight700
+  font-size: 10px
   font-weight: 700
   font-style: normal
   letter-spacing: 0
+
+.size12-weight700
+  font-size: 12px !important
+  font-weight: 700 !important
+  font-style: normal !important
+  letter-spacing: 0 !important
 
 .size14-weight700
   font-size: 14px
