--- a/front-end/assets/helpers/_hot-styles.scss
+++ b/front-end/assets/helpers/_hot-styles.scss
@@ -22,6 +22,12 @@
   width: 100%;
 }
 
+.w-md-100{
+  @media (max-width: map-get($grid-breakpoints, md)) {
+    width: 100%;
+  }
+}
+
 .h-100{
   height: 100%;
 }
