--- a/front-end/assets/helpers/_font-helper.sass
+++ b/front-end/assets/helpers/_font-helper.sass
@@ -104,10 +104,10 @@
   letter-spacing: 0
 
 .size24-weight700
-  font-size: 24px
-  font-weight: 700
-  font-style: normal
-  letter-spacing: 0
+  font-size: 24px !important
+  font-weight: 700 !important
+  font-style: normal !important
+  letter-spacing: 0 !important
 
 .size36-weight700
   font-size: 36px
