--- a/front-end/assets/variables.scss
+++ b/front-end/assets/variables.scss
@@ -22,3 +22,5 @@ $carousel-controls-bg: transparent;
 
 @import '~vuetify/src/styles/styles.sass';
 $carousel-controls-bg: transparent;
+
+$icon-outlined-border-width: 2px !default;
