--- a/front-end/assets/helpers/_hot-styles.scss
+++ b/front-end/assets/helpers/_hot-styles.scss
@@ -91,3 +91,16 @@
 .cursor-default {
   cursor: default;
 }
+
+.custom-elevation {
+  box-shadow: -4px 8px 14px rgba(0, 0, 0, 0.06) !important;
+}
+
+.truncate-text {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 1.3em;
+  height: 3.9em;
+}
