Minor updates for pages and components.

--- a/front-end/assets/helpers/_font-helper.sass
+++ b/front-end/assets/helpers/_font-helper.sass
@@ -98,10 +98,10 @@
   letter-spacing: 0
 
 .size22-weight700
-  font-size: 22px
-  font-weight: 700
-  font-style: normal
-  letter-spacing: 0
+  font-size: 22px !important
+  font-weight: 700 !important
+  font-style: normal !important
+  letter-spacing: 0 !important
 
 .size24-weight700
   font-size: 24px !important
